// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should create an overlay that says Fetching User 1`] = `
<DocumentFragment>
  <div
    class="_loading_overlay_wrapper _loading_overlay_wrapper--active css-ft4slc"
    data-testid="wrapper"
  >
    <div
      class="_loading_overlay_overlay css-df17o1"
      data-testid="overlay"
    >
      <div
        class="_loading_overlay_content css-42igfv"
      >
        <div
          class="_loading_overlay_spinner css-50etie"
        >
          <svg
            viewBox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-miterlimit="10"
              stroke-width="2"
            />
          </svg>
        </div>
        Fetching User
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Should create an overlay that says Initializing App 1`] = `
<DocumentFragment>
  <div
    class="_loading_overlay_wrapper _loading_overlay_wrapper--active css-ft4slc"
    data-testid="wrapper"
  >
    <div
      class="_loading_overlay_overlay css-df17o1"
      data-testid="overlay"
    >
      <div
        class="_loading_overlay_content css-42igfv"
      >
        <div
          class="_loading_overlay_spinner css-50etie"
        >
          <svg
            viewBox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-miterlimit="10"
              stroke-width="2"
            />
          </svg>
        </div>
        Initializing App
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Should fade overlay out on click 1`] = `
<DocumentFragment>
  <div
    class="_loading_overlay_wrapper _loading_overlay_wrapper--active css-ft4slc"
    data-testid="wrapper"
  >
    <div
      class="_loading_overlay_overlay css-df17o1"
      data-testid="overlay"
    >
      <div
        class="_loading_overlay_content css-42igfv"
      >
        <div
          class="_loading_overlay_spinner css-50etie"
        >
          <svg
            viewBox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-miterlimit="10"
              stroke-width="2"
            />
          </svg>
        </div>
        Fetching User
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Should fade overlay out on click 2`] = `
<DocumentFragment>
  <div
    class="_loading_overlay_wrapper css-79elbk"
    data-testid="wrapper"
  >
    <div
      class="_loading_overlay_overlay css-1r098pj _loading-overlay-transition-exit-active"
      data-testid="overlay"
    >
      <div
        class="_loading_overlay_content css-42igfv"
      >
        <div
          class="_loading_overlay_spinner css-50etie"
        >
          <svg
            viewBox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-miterlimit="10"
              stroke-width="2"
            />
          </svg>
        </div>
        Fetching User
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Should not show an overlay 1`] = `
<DocumentFragment>
  <div
    class="_loading_overlay_wrapper css-79elbk"
    data-testid="wrapper"
  >
    <div
      class="_loading_overlay_overlay css-1r098pj _loading-overlay-transition-exit-active"
      data-testid="overlay"
    >
      <div
        class="_loading_overlay_content css-42igfv"
      >
        <div
          class="_loading_overlay_spinner css-50etie"
        >
          <svg
            viewBox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-miterlimit="10"
              stroke-width="2"
            />
          </svg>
        </div>
        Fetching User
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`Should show an error without spinner 1`] = `
<DocumentFragment>
  <div
    class="_loading_overlay_wrapper _loading_overlay_wrapper--active css-ft4slc"
    data-testid="wrapper"
  >
    <div
      class="_loading_overlay_overlay css-df17o1"
      data-testid="overlay"
    >
      <div
        class="_loading_overlay_content css-42igfv"
      >
        Test Error
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;
